--- a/index.html
+++ b/index.html
@@ -1,286 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sidebar Impactante e Luxuosa</title>
-    <!-- Font Awesome para ícones -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
-        body {
-            display: flex;
-            height: 100vh;
-            overflow: hidden;
-            background: #0d0d21;
-            color: #ffffff;
-        }
-
-        /* Sidebar */
-        .sidebar {
-            width: 80px;
-            height: 100vh;
-            background: linear-gradient(145deg, rgba(25, 25, 60, 0.85), rgba(15, 15, 30, 0.9));
-            backdrop-filter: blur(10px);
-            box-shadow: 10px 0 30px rgba(0, 0, 0, 0.7);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            position: relative;
-            transition: width 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-            overflow: hidden;
-            border-right: 1px solid rgba(255, 255, 255, 0.1);
-            transform-style: preserve-3d;
-        }
-
-        .sidebar.open {
-            width: 280px;
-            transform: rotateY(-10deg);
-        }
-
-        /* Partículas animadas no fundo */
-        .particles {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle, rgba(58, 71, 212, 0.6), rgba(255, 70, 100, 0.3));
-            opacity: 0.08;
-            pointer-events: none;
-            animation: moveParticles 12s infinite alternate ease-in-out;
-            filter: blur(15px);
-        }
-
-        @keyframes moveParticles {
-            0% { background-position: 0 0; }
-            100% { background-position: 50px 50px; }
-        }
-
-        /* Logo */
-        .logo {
-            display: flex;
-            align-items: center;
-            color: #ffffff;
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 40px;
-            margin-top: 20px;
-            cursor: pointer;
-            position: relative;
-            transition: opacity 0.5s, transform 0.5s;
-            filter: drop-shadow(0 0 10px #00aaff);
-        }
-
-        .logo i {
-            font-size: 30px;
-            margin-right: 10px;
-        }
-
-        .logo span {
-            display: none;
-            opacity: 0;
-            transform: translateX(-20px);
-        }
-
-        .sidebar.open .logo span {
-            display: inline;
-            opacity: 1;
-            transform: translateX(0);
-        }
-
-        /* Menu com bordas de neon */
-        .menu {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .menu-item {
-            color: #bdc3c7;
-            font-size: 16px;
-            display: flex;
-            align-items: center;
-            padding: 15px 20px;
-            transition: color 0.3s, background 0.3s, transform 0.3s;
-            cursor: pointer;
-            position: relative;
-            overflow: hidden;
-            border-radius: 12px;
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.05);
-        }
-
-        .menu-item:hover {
-            color: #ffffff;
-            background: rgba(255, 255, 255, 0.15);
-            transform: scale(1.05);
-            box-shadow: 0 0 15px rgba(58, 71, 212, 0.3), inset 0 0 10px rgba(255, 255, 255, 0.2);
-        }
-
-        .menu-item i {
-            font-size: 20px;
-            margin-right: 20px;
-            color: #3498db;
-            transition: color 0.3s;
-        }
-
-        .menu-item span {
-            display: none;
-            opacity: 0;
-            transition: opacity 0.5s, transform 0.5s;
-            transform: translateX(-20px);
-        }
-
-        .sidebar.open .menu-item span {
-            display: inline;
-            opacity: 1;
-            transform: translateX(0);
-        }
-
-        /* Sidebar Footer com efeito de neon */
-        .sidebar-footer {
-            margin-top: auto;
-            padding: 15px 20px;
-            color: #e67e22;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            transition: background 0.3s;
-            filter: drop-shadow(0 0 10px #e67e22);
-        }
-
-        .sidebar-footer:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-            filter: drop-shadow(0 0 20px #e67e22);
-        }
-
-        .sidebar-footer i {
-            margin-right: 10px;
-        }
-
-        /* Botão de alternância do tema */
-        .toggle-btn {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background-color: #3498db;
-            border: none;
-            color: #fff;
-            padding: 10px 15px;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            z-index: 10;
-            filter: drop-shadow(0 0 5px #3498db);
-        }
-
-        .toggle-btn:hover {
-            background-color: #2980b9;
-        }
-
-        /* Conteúdo Principal */
-        .main-content {
-            flex: 1;
-            padding: 30px;
-            background: #0d0d21;
-            color: #ffffff;
-            overflow-y: auto;
-        }
-
-        .main-content h1 {
-            font-size: 36px;
-            margin-bottom: 20px;
-            animation: fadeIn 1s ease;
-        }
-
-        .main-content p {
-            font-size: 18px;
-            color: #bdc3c7;
-            animation: fadeIn 1.2s ease;
-        }
-
-        /* Animação de fade-in */
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-    </style>
+    <title>Página de Maykon Tardoche | Desenvolvedor FullStack</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<div class="sidebar">
-    <!-- Fundo de partículas -->
-    <div class="particles"></div>
-    
-    <!-- Logo -->
-    <div class="logo" onclick="toggleSidebar()">
-        <i class="fas fa-gem"></i>
-        <span>InspireApp</span>
+    <!-- Sidebar -->
+    <div id="sidebar">
+        <ul>
+            <li><a href="#"><i class="fa fa-home"></i><span>Home</span></a></li>
+            <li><a href="#"><i class="fa fa-code"></i><span>Código</span></a></li>
+            <li><a href="#"><i class="fa fa-cogs"></i><span>Configurações</span></a></li>
+            <li><a href="#"><i class="fa fa-bug"></i><span>Erros</span></a></li>
+            <li><a href="#"><i class="fa fa-tasks"></i><span>Tarefas</span></a></li>
+            <li><a href="#"><i class="fa fa-users"></i><span>Usuários</span></a></li>
+            <li><a href="#"><i class="fa fa-paint-brush"></i><span>Design</span></a></li>
+            <li><a href="#"><i class="fa fa-cloud"></i><span>Cloud</span></a></li>
+            <li><a href="#"><i class="fa fa-chart-line"></i><span>Relatórios</span></a></li>
+            <li><a href="#"><i class="fa fa-info-circle"></i><span>Sobre</span></a></li>
+        </ul>
     </div>
 
-    <!-- Menu -->
-    <div class="menu">
-        <div class="menu-item">
-            <i class="fas fa-home"></i>
-            <span>Dashboard</span>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-search"></i>
-            <span>Search</span>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-chart-line"></i>
-            <span>Insights</span>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-file-alt"></i>
-            <span>Docs</span>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-box-open"></i>
-            <span>Products</span>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-cog"></i>
-            <span>Settings</span>
-        </div>
-        <div class="menu-item">
-            <i class="fas fa-comments"></i>
-            <span>Messages</span>
-        </div>
+    <!-- Conteúdo principal -->
+    <div class="content">
+        <h1>Bem-vindo à Página de Maykon Tardoche</h1>
+        <p>Olá, meu nome é <strong>Maykon Tardoche</strong>, sou um desenvolvedor FullStack especializado na criação de sidebars interativos e modernos para web. Nesta página, você poderá acessar vários códigos prontos para usar em seus próprios projetos.</p>
+        <p>Todos os códigos disponíveis aqui devem ser utilizados com a devida referência ao meu GitHub. Acesse meu repositório para mais exemplos e atualizações.</p>
+        <p><strong>GitHub:</strong> <a href="https://github.com/maykontardoche" target="_blank">github.com/maykontardoche</a></p>
     </div>
 
-    <!-- Footer -->
-    <div class="sidebar-footer">
-        <i class="fas fa-user-circle"></i>
-        <span>Account</span>
-    </div>
-</div>
-
-<!-- Botão de alternância -->
-<button class="toggle-btn" onclick="toggleSidebar()">Alternar Sidebar</button>
-
-<!-- Conteúdo Principal -->
-<div class="main-content">
-    <h1>Bem-vindo ao InspireApp Dashboard</h1>
-    <p>Explore a sidebar e descubra funcionalidades incríveis.</p>
-</div>
-
-<script>
-    function toggleSidebar() {
-        document.querySelector('.sidebar').classList.toggle('open');
-    }
-</script>
-
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
